--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,8 @@ layout: default
     {{ content }}
   </div>
 
+  <!--sharexy code start--><div id='shr_954996'><script type='text/javascript'>(function(w) { if (!w.SharexyWidget) { w.SharexyWidget = {};} if (!w.SharexyWidget.Params) { w.SharexyWidget.Params = {}; } w.SharexyWidget.Params['954996'] = {'code_id':'954996','publisher_key':'undefined','design':'classic','layout_static':'h','type':'stf','mode_float':'l','size_float':'60','size_static':'32','buzz':'0','services':['facebook', 'twitter', 'reddit', 'google_plus', 'blogger', 'tumblr'],'url':'current','allways_show_ads':'0','show_ads_sharing':'0','show_ads_cursor':'0','bg_float':'0','bg_color':'#f1f1f1','labels':'0','counters':'0', 'counters_float':'0'} })(window);</script><script type='text/javascript' src='http://shuttle.sharexy.com/LoaderLite.js'></script></div><a href='http://sharexy.com/'><img src='http://sharexy.com/statpixel.png' style='border: 0' /></a><!--sharexy code end -->
+
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
