--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,22 @@ layout: default
     {{ content }}
   </div>
 
-  <!--sharexy code start--><div id='shr_954996'><script type='text/javascript'>(function(w) { if (!w.SharexyWidget) { w.SharexyWidget = {};} if (!w.SharexyWidget.Params) { w.SharexyWidget.Params = {}; } w.SharexyWidget.Params['954996'] = {'code_id':'954996','publisher_key':'undefined','design':'classic','layout_static':'h','type':'stf','mode_float':'l','size_float':'60','size_static':'32','buzz':'0','services':['facebook', 'twitter', 'reddit', 'google_plus', 'blogger', 'tumblr'],'url':'current','allways_show_ads':'0','show_ads_sharing':'0','show_ads_cursor':'0','bg_float':'0','bg_color':'#f1f1f1','labels':'0','counters':'0', 'counters_float':'0'} })(window);</script><script type='text/javascript' src='http://shuttle.sharexy.com/LoaderLite.js'></script></div><a href='http://sharexy.com/'><img src='http://sharexy.com/statpixel.png' style='border: 0' /></a><!--sharexy code end -->
+  <!-- AddToAny BEGIN -->
+  <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+  <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+  <a class="a2a_button_facebook"></a>
+  <a class="a2a_button_twitter"></a>
+  <a class="a2a_button_google_plus"></a>
+  <a class="a2a_button_reddit"></a>
+  <a class="a2a_button_linkedin"></a>
+  <a class="a2a_button_tumblr"></a>
+  <a class="a2a_button_whatsapp"></a>
+  <a class="a2a_button_telegram"></a>
+  <a class="a2a_button_skype"></a>
+  <a class="a2a_button_viber"></a>
+  </div>
+  <script async src="https://static.addtoany.com/menu/page.js"></script>
+  <!-- AddToAny END -->
 
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
