--- a/_includes/share-buttons.html
+++ b/_includes/share-buttons.html
@@ -1,4 +1,4 @@
-{% jekyll.environment == "production" %}
+{% if jekyll.environment == "production" %}
 
   <!-- AddToAny BEGIN -->
   <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
